# rust-study

./: Cargo.toml  app.db
src/cast/: main.rs
src/enum/: main.rs
src/flow/: main.rs
src/functions/: main.rs
src/hash_maps/: main.rs
src/impl/: main.rs
src/impl/entity/: character_ownership.rs  character_ref.rs  mod.rs
src/option/: main.rs
src/result/: main.rs
src/sqlite/: character.rs  main.rs
src/struct/: main.rs
src/struct/entity/: car.rs  mod.rs  vector_2.rs
src/trait/: main.rs
src/trait/health/: health.rs
src/trait/unit/: unit.rs
src/variables/: main.rs
