[package]
name = "rust-study"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "variables"
path = "src/variables/main.rs"

[[bin]]
name = "functions"
path = "src/functions/main.rs"

[[bin]]
name = "impl"
path = "src/impl/main.rs"

[[bin]]
name = "flow"
path = "src/flow/main.rs"

[[bin]]
name = "trait"
path = "src/trait/main.rs"

[[bin]]
name = "sqlite"
path = "src/sqlite/main.rs"

[[bin]]
name = "struct"
path = "src/struct/main.rs"

[[bin]]
name = "enum"
path = "src/enum/main.rs"

[[bin]]
name = "option"
path = "src/option/main.rs"